Fix #27160 - [Feature] Add SurveyListRequirementScanner for productSpecification

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/plm_fr.properties
@@ -349,6 +349,8 @@ message.decernis.ingredient.severalRid                = Plusieurs RID trouv\u00E
 message.formulate.allergen.error.empty                = Allerg\u00E8ne non renseign\u00E9
 message.formulate.allergen.error.nullQtyPerc          = Impossible de calculer le pourcentage de l''allerg\u00E8ne {0}: pourcentage non renseign\u00E9 sur certaines entit\u00E9es.
 message.formulate.allergen.forbidden                  = Allerg\u00E8ne interdit : {0}
+message.formulate.survey.incorrect.answer               = R\u00E9ponse incorrecte pour la question : {0}
+message.formulate.survey.missing.choice                = Choix manquant pour la question : {0}
 message.formulate.allergen.notValidated               = Les allerg\u00E8nes ne sont pas valid\u00E9s
 message.formulate.clp.forbidden                       = Classification interdite: {0}.
 message.formulate.comparewith.formulate.entity.error  = Impossible de formuler l'entit\u00E9 \u00E0 comparer: {0}
