Fix #26958 - [Bug] Limit bulk-edit to 50 items max

--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
@@ -188,6 +188,7 @@ message.createSupplier.failure                = Vous n'avez pas les droits de r\
 message.createSupplier.success                = L'utilisateur '{0}' est associ\u00E9 au fournissuer 
 message.delete-content.failure                = Erreur lors de la suppression du contenu
 message.delete-content.success                = Contenu supprim\u00E9 avec succ\u00E9s
+message.too.many.items                        = Trop d'\u00E9l\u00E9ments s\u00E9lectionn\u00E9s ({0}). Veuillez s\u00E9lectionner 50 \u00E9l\u00E9ments ou moins.
 message.delete.please-wait                    = Veuillez patienter. Suppression d'entit\u00E9 en cours...
 message.email.notValide                       = Veuillez saisir une adresse \u00E9lectronique valide.
 message.formulate-entities.failure            = Echec de la formulation des entit\u00E9s
