Fix #26827 - [Feature] Fix copyOrMerge admin message

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_fr.properties
@@ -8,7 +8,7 @@ beCPG.charact.name.format.type                                 = string
 beCPG.classify.rights.check.description                        = Si vrai, le syst\u00E8me v\u00E9rifiera si l'utilisateur a la permission de classer un document en fonction de la destination
 beCPG.comparison.name.format.description                       = Permet de d\u00E9finir pour chaque type le format du nom \u00E0 utiliser lors de la comparaison. Le format \u00E0 respecter est type1|format1,type2|format2,...
 beCPG.connector.channel.register.activity.description          = Enregistrer les activit\u00E9s sur les canaux depuis le connecteur
-beCPG.copyOrBranch.propertiesToReset.description               = Permet de d\u00E9finir les propri\u00E9t\u00E9s et associations qui ne seront pas conserv\u00E9es lors d'une copie ou d'une fusion, s\u00E9par\u00E9es par des virgules
+beCPG.copyOrBranch.propertiesToReset.description               = Permet de d\u00E9finir les propri\u00E9t\u00E9s et associations qui ne seront pas conserv\u00E9es lors d'une copie ou d'une fusion, s\u00E9par\u00E9es par des virgules. Il est possible d'ajouter un pipe pour s\u00E9parer la copie (|copy) de la branche (|branch) (ex: eanCode|branch, customCode|copy)
 beCPG.copyOrBranch.typesToReset.description                    = Permet de d\u00E9finir les types qui ne seront pas conserv\u00E9es lors d'une copie ou d'une fusion, s\u00E9par\u00E9es par des virgules
 beCPG.currency.supported.description                           = Permet de d\u00E9finir les devises support\u00E9es par le syst\u00E8me, s\u00E9par\u00E9es par des virgules
 beCPG.datalist.effectiveFilterEnabled.description              = Si "true", le syst\u00E8me n'affiche pas les lignes non effectives dans les listes composition, emballage et process
@@ -27,7 +27,7 @@ beCPG.formulation.ingsCalculatingWithYield.description         = Permet de sp\u0
 beCPG.formulation.nutList.propagateUpEnable.description        = Permet de d\u00E9finir si les nutriments se propagent depuis la composition
 beCPG.formulation.score.nutriscore.regulatoryClass.description = Permet de sp\u00E9cifier la classe Java utilis\u00E9e pour le calcul du Nutriscore
 beCPG.formulation.security.enforceACL                          = Permet de d\u00E9finir si les r\u00E8gles de s\u00E9curit\u00E9 doivent appliquer des droits d'accc\u00E8s sur les listes lors de la formulation
-beCPG.formulation.security.forceResetACL                        = Force les r\u00E8gles de s\u00E9curit\u00E9 \u00E0 r\u00E9initialiser toutes les permissions m\u00EAme si enforceACL est d\u00E9sactiv\u00E9
+beCPG.formulation.security.forceResetACL                       = Force les r\u00E8gles de s\u00E9curit\u00E9 \u00E0 r\u00E9initialiser toutes les permissions m\u00EAme si enforceACL est d\u00E9sactiv\u00E9
 beCPG.formulation.specification.addInfoReqCtrl.description     = Permet de sp\u00E9cifier si les exigences de sp\u00E9cification de type informative doivent \u00EAtre ajout\u00E9es au produit
 beCPG.multilinguale.disabledMLTextFields.description           = Permet de d\u00E9sactiver les multilingues pour certains champs. Vous pouvez sp\u00E9cifier les champs concern\u00E9s en les s\u00E9parant par des virgules
 beCPG.multilinguale.shouldExtractMLText.description            = Permet de sp\u00E9cifier si le syst\u00E8me doit extraire les champs multilingues dans plusieurs langues ou seulement dans la langue par d\u00E9faut
