--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_en.properties
@@ -8,7 +8,7 @@ beCPG.charact.name.format.type                                 = string
 beCPG.classify.rights.check.description                        = If true, the system will check if the user has permission to classify a document based on the destination
 beCPG.comparison.name.format.description                       = Allows you to define for each type the name format to use during the comparison. The format to respect is type1|format1, type2|format2,...
 beCPG.connector.channel.register.activity.description          = Register channel activities from connector
-beCPG.copyOrBranch.propertiesToReset.description               = Allows you to define properties and associations that will not be preserved during a copy or merge, separated by commas
+beCPG.copyOrBranch.propertiesToReset.description               = Allows you to define properties and associations that will not be preserved during a copy or merge, separated by commas. A pipe can be added to separate the copy (|copy) from the branch (|branch) (e.g. eanCode|branch, customCode|copy)
 beCPG.copyOrBranch.typesToReset.description                    = Allows you to define type that will not be copy during a copy or merge, separated by commas
 beCPG.currency.supported.description                           = Allows you to define the currencies supported by the system, separated by commas
 beCPG.datalist.effectiveFilterEnabled.description              = If "true", the system does not display non-effective lines in the composition, packaging and process lists
@@ -27,7 +27,7 @@ beCPG.formulation.ingsCalculatingWithYield.description         = Allows you to s
 beCPG.formulation.nutList.propagateUpEnable.description        = Allows you to define whether the nutrients propagate from the composition
 beCPG.formulation.score.nutriscore.regulatoryClass.description = Allows you to specify the Java class used for calculating the nutrient score
 beCPG.formulation.security.enforceACL                          = Allows you to define whether security rules should apply access rights to lists when formulating
-beCPG.formulation.security.forceResetACL                        = Forces security rules to reset all permissions even if enforceACL is disabled
+beCPG.formulation.security.forceResetACL                       = Forces security rules to reset all permissions even if enforceACL is disabled
 beCPG.formulation.specification.addInfoReqCtrl.description     = Allows you to specify whether informational type specification requirements should be added to the product
 beCPG.multilinguale.disabledMLTextFields.description           = Allows you to deactivate multilanguages \u200B\u200Bfor certain fields. You can specify the relevant fields by separating them with commas
 beCPG.multilinguale.shouldExtractMLText.description            = Allows you to specify whether the system should extract multilingual fields in several languages \u200B\u200Bor only in the default language
