Fix #22696 - [Feature] Add Toxico systemic and max values on bcpg:ing

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
@@ -321,9 +321,11 @@ bcpg_bcpgmodel.property.bcpg_ingToxMaxPhototoxic.title                          
 bcpg_bcpgmodel.property.bcpg_ingToxMaxSensitization.title                       = Max sensitization (%)
 bcpg_bcpgmodel.property.bcpg_ingToxMaxSkinIrritationLeaveOn.title               = Max skin irritation leave-on (%)
 bcpg_bcpgmodel.property.bcpg_ingToxMaxSkinIrritationRinseOff.title              = Max skin irritation rinse-off (%)
+bcpg_bcpgmodel.property.bcpg_ingToxMaxValues.title                              = Max values (%)
 bcpg_bcpgmodel.property.bcpg_ingToxMosMoe.title                                 = MoS/MoE
 bcpg_bcpgmodel.property.bcpg_ingToxOralAbsorption.title                         = Oral absorption (%)
 bcpg_bcpgmodel.property.bcpg_ingToxPodSystemic.title                            = POD systemic (mg/kg/d)
+bcpg_bcpgmodel.property.bcpg_ingToxSystemicValues.title                         = Systemic values (%)
 bcpg_bcpgmodel.property.bcpg_ingTypeDecThreshold.description                    = The type is detailed when percentage is exceeded
 bcpg_bcpgmodel.property.bcpg_ingTypeDecThreshold.title                          = Threshold (%)
 bcpg_bcpgmodel.property.bcpg_ingTypeDoNotDeclare.description                    = Do not declare type in labelling
@@ -789,6 +791,7 @@ listconstraint.bcpg_meatTypes.Porcines                                = Porcines
 listconstraint.bcpg_nutListMeasurementPrecisions.Approximatly         = Approximatly
 listconstraint.bcpg_nutListMeasurementPrecisions.LessThan             = Less Than
 listconstraint.bcpg_nutListRequirementTypes.AsPrepared                = Prepared value
+listconstraint.bcpg_nutListRequirementTypes.AsPreparedServing         = Prepared value per serving
 listconstraint.bcpg_nutListRequirementTypes.GdaPerc                   = % RI per portion
 listconstraint.bcpg_nutListRequirementTypes.Serving                   = 1 serving
 listconstraint.bcpg_nutrientPreparationStates.Prepared                = Prepared
