Fix #22696 - [Feature] Add Toxico systemic and max values on bcpg:ing

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -308,9 +308,11 @@ bcpg_bcpgmodel.property.bcpg_ingToxMaxPhototoxic.title                          
 bcpg_bcpgmodel.property.bcpg_ingToxMaxSensitization.title                       = Sensibilisation maximale (%)
 bcpg_bcpgmodel.property.bcpg_ingToxMaxSkinIrritationLeaveOn.title               = Irritation cutan\u00E9e non rinc\u00E9 maximale (%)
 bcpg_bcpgmodel.property.bcpg_ingToxMaxSkinIrritationRinseOff.title              = Irritation cutan\u00E9e rinc\u00E9 maximale (%)
+bcpg_bcpgmodel.property.bcpg_ingToxMaxValues.title                              = Valeurs max (%)
 bcpg_bcpgmodel.property.bcpg_ingToxMosMoe.title                                 = MoS/MoE
 bcpg_bcpgmodel.property.bcpg_ingToxOralAbsorption.title                         = Absorption orale (%)
 bcpg_bcpgmodel.property.bcpg_ingToxPodSystemic.title                            = POD syst\u00E9mique (mg/kg/j)
+bcpg_bcpgmodel.property.bcpg_ingToxSystemicValues.title                         = Valeurs syst\u00E9miques (%)
 bcpg_bcpgmodel.property.bcpg_ingTypeDecThreshold.description                    = La cat\u00E9gorie r\u00E9glementaire est d\u00E9taill\u00E9e lorsque le seuil est d\u00E9pass\u00E9
 bcpg_bcpgmodel.property.bcpg_ingTypeDecThreshold.title                          = Seuil (%)
 bcpg_bcpgmodel.property.bcpg_ingTypeDoNotDeclare.description                    = Ne pas d\u00E9clarer le type dans l'\u00E9tiquetage
@@ -774,6 +776,7 @@ listconstraint.bcpg_meatTypes.Porcines                                = Porcins
 listconstraint.bcpg_nutListMeasurementPrecisions.Approximatly         = Arrondi
 listconstraint.bcpg_nutListMeasurementPrecisions.LessThan             = Inf\u00E9rieur \u00E0
 listconstraint.bcpg_nutListRequirementTypes.AsPrepared                = Valeur pr\u00E9par\u00E9
+listconstraint.bcpg_nutListRequirementTypes.AsPreparedServing         = Valeur pr\u00E9par\u00E9e par portion
 listconstraint.bcpg_nutListRequirementTypes.GdaPerc                   = % AR par portion
 listconstraint.bcpg_nutListRequirementTypes.Serving                   = 1 portion
 listconstraint.bcpg_nutrientPreparationStates.Prepared                = Pr\u00E9par\u00E9
