Fix #28024 - [Bug] Add "List state" message

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_en.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_en.properties
@@ -50,6 +50,7 @@ bcpg_bcpgmodel.association.bcpg_nrScript.title                  = Script
 bcpg_bcpgmodel.association.bcpg_nrTarget.title                  = Inside folder
 bcpg_bcpgmodel.association.bcpg_parentEntityRef.title           = Parent entity
 bcpg_bcpgmodel.description                                      = beCPG domain model
+
 bcpg_bcpgmodel.property.bcpg_alData.title                       = Activity content
 bcpg_bcpgmodel.property.bcpg_alType.title                       = Activity type
 bcpg_bcpgmodel.property.bcpg_alUserId.title                     = User
@@ -67,6 +68,7 @@ bcpg_bcpgmodel.property.bcpg_code.title                         = beCPG code
 bcpg_bcpgmodel.property.bcpg_color.title                        = Color
 bcpg_bcpgmodel.property.bcpg_depthLevel.title                   = Level
 bcpg_bcpgmodel.property.bcpg_endEffectivity.title               = End of effectivity
+bcpg_bcpgmodel.property.bcpg_entityDataListState.title          = List state
 bcpg_bcpgmodel.property.bcpg_entityLists.title                  = Entity data lists
 bcpg_bcpgmodel.property.bcpg_entityTplClassName.title           = Class type
 bcpg_bcpgmodel.property.bcpg_entityTplEnabled.title             = Active
