--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_fr.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_fr.properties
@@ -59,12 +59,10 @@ bcpg_bcpgmodel.association.bcpg_parentEntityRef.title           = Entit\u00E9 pa
 bcpg_bcpgmodel.description                                      = BCPG Domain Model
 bcpg_bcpgmodel.property.bcpg_aiExtraPrompt.title                = Extra prompt
 bcpg_bcpgmodel.property.bcpg_aiSuggestedFields.title            = Champs sugg\u00E9r\u00E9s
-
 bcpg_bcpgmodel.property.bcpg_aiValidationCriteria.title         = Crit\u00E8res de validation
 bcpg_bcpgmodel.property.bcpg_aiValidationDate.title             = Date de validation Chef IA
 bcpg_bcpgmodel.property.bcpg_aiValidationHints.title            = R\u00E9sultat de validation Chef IA
 bcpg_bcpgmodel.property.bcpg_aiValidationState.title            = Etat de valiation Chef IA
-
 bcpg_bcpgmodel.property.bcpg_alData.title                       = Contenu de l'activit\u00E9
 bcpg_bcpgmodel.property.bcpg_alType.title                       = Type d'activit\u00E9
 bcpg_bcpgmodel.property.bcpg_alUserId.title                     = Utilisateur
@@ -93,6 +91,7 @@ bcpg_bcpgmodel.property.bcpg_documentCategory.title             = Cat\u00E9gorie
 bcpg_bcpgmodel.property.bcpg_documentIsMandatory.title          = Est obligatoire
 bcpg_bcpgmodel.property.bcpg_documentState.title                = Etat du document
 bcpg_bcpgmodel.property.bcpg_endEffectivity.title               = Fin d'effectivit\u00E9
+bcpg_bcpgmodel.property.bcpg_entityDataListState.title          = Etat de la liste
 bcpg_bcpgmodel.property.bcpg_entityLists.title                  = Listes de donn\u00E9es entit\u00E9
 bcpg_bcpgmodel.property.bcpg_entityTplClassName.title           = Type d'objet
 bcpg_bcpgmodel.property.bcpg_entityTplEnabled.title             = Actif
