Fix #28024 - [Bug] Add entityList state messages

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_fr.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_fr.properties
@@ -157,6 +157,9 @@ listconstraint.bcpg_activityTypes.Formulation               = Formulation
 listconstraint.bcpg_activityTypes.Merge                     = Fusion
 listconstraint.bcpg_activityTypes.Report                    = Rapport
 listconstraint.bcpg_activityTypes.State                     = Etat
+
+listconstraint.bcpg_entityDataListStates.ToValidate         = D\u00E9verrouill\u00E9
+listconstraint.bcpg_entityDataListStates.Valid              = Verrouill\u00E9
 listconstraint.bcpg_externalLinkTargets._blank              = Nouvel onglet
 listconstraint.bcpg_externalLinkTargets._self               = Onglet actuel
 listconstraint.bcpg_nrRecurringDays.FRIDAY                  = Vendredi
