Fix #28024 - [Bug] Add entityList state messages

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_en.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_en.properties
@@ -156,6 +156,8 @@ listconstraint.bcpg_activityTypes.Formulation               = Formulation
 listconstraint.bcpg_activityTypes.Merge                     = Merge
 listconstraint.bcpg_activityTypes.Report                    = Report
 listconstraint.bcpg_activityTypes.State                     = State
+listconstraint.bcpg_entityDataListStates.ToValidate         = Unlocked
+listconstraint.bcpg_entityDataListStates.Valid              = Locked
 listconstraint.bcpg_externalLinkTargets._blank              = New tab
 listconstraint.bcpg_externalLinkTargets._self               = Current tab
 listconstraint.bcpg_nrRecurringDays.FRIDAY                  = Friday
