Fix #28024 - [Bug] Add entityList state messages

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_fr.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_fr.properties
@@ -190,6 +190,8 @@ listconstraint.bcpg_documentStates.OnHold                   = En attente
 listconstraint.bcpg_documentStates.Refused                  = Refus\u00E9
 listconstraint.bcpg_documentStates.ToValidate               = A valider
 listconstraint.bcpg_documentStates.Valid                    = Valid\u00E9
+listconstraint.bcpg_entityDataListStates.ToValidate         = D\u00E9verrouill\u00E9
+listconstraint.bcpg_entityDataListStates.Valid              = Verrouill\u00E9
 listconstraint.bcpg_externalLinkTargets._blank              = Nouvel onglet
 listconstraint.bcpg_externalLinkTargets._self               = Onglet actuel
 listconstraint.bcpg_nrRecurringDays.FRIDAY                  = Vendredi
