--- a/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/surveyModel_fr.properties
+++ b/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/surveyModel_fr.properties
@@ -1,47 +1,91 @@
 
-survey_surveymodel.association.survey_advSearchSurveyAnswer1.title    = R\u00E9ponse 1
-survey_surveymodel.association.survey_advSearchSurveyAnswer10.title   = R\u00E9ponse 10
-survey_surveymodel.association.survey_advSearchSurveyAnswer2.title    = R\u00E9ponse 2
-survey_surveymodel.association.survey_advSearchSurveyAnswer3.title    = R\u00E9ponse 3
-survey_surveymodel.association.survey_advSearchSurveyAnswer4.title    = R\u00E9ponse 4
-survey_surveymodel.association.survey_advSearchSurveyAnswer5.title    = R\u00E9ponse 5
-survey_surveymodel.association.survey_advSearchSurveyAnswer6.title    = R\u00E9ponse 6
-survey_surveymodel.association.survey_advSearchSurveyAnswer7.title    = R\u00E9ponse 7
-survey_surveymodel.association.survey_advSearchSurveyAnswer8.title    = R\u00E9ponse 8
-survey_surveymodel.association.survey_advSearchSurveyAnswer9.title    = R\u00E9ponse 9
-survey_surveymodel.association.survey_advSearchSurveyQuestion1.title  = Question 1
-survey_surveymodel.association.survey_advSearchSurveyQuestion10.title = Question 10
-survey_surveymodel.association.survey_advSearchSurveyQuestion2.title  = Question 2
-survey_surveymodel.association.survey_advSearchSurveyQuestion3.title  = Question 3
-survey_surveymodel.association.survey_advSearchSurveyQuestion4.title  = Question 4
-survey_surveymodel.association.survey_advSearchSurveyQuestion5.title  = Question 5
-survey_surveymodel.association.survey_advSearchSurveyQuestion6.title  = Question 6
-survey_surveymodel.association.survey_advSearchSurveyQuestion7.title  = Question 7
-survey_surveymodel.association.survey_advSearchSurveyQuestion8.title  = Question 8
-survey_surveymodel.association.survey_advSearchSurveyQuestion9.title  = Question 9
-survey_surveymodel.association.survey_fsLinkedCharactRefs.title       = Charact\u00E9ristiques li\u00E9es
-survey_surveymodel.association.survey_fsLinkedHierarchy.title         = Familles li\u00E9es
-survey_surveymodel.association.survey_nextQuestion.title              = Question suivante
-survey_surveymodel.association.survey_scoreCriterion.title            = Crit\u00E8re
-survey_surveymodel.association.survey_slChoices.title                 = Choix retenu
-survey_surveymodel.association.survey_slQuestion.title                = Question
-survey_surveymodel.property.survey_fsLinkedTypes.title                = Types d'entit\u00E9
-survey_surveymodel.property.survey_fsSurveyListName.title             = Liste de questionnaires
-survey_surveymodel.property.survey_questionIsMandatory.title          = Obligatoire ?
-survey_surveymodel.property.survey_questionIsVisible.title            = Visible ?
-survey_surveymodel.property.survey_questionLabel.title                = Libell\u00E9
-survey_surveymodel.property.survey_questionLowerNote.title            = Note inf\u00E9rieure
-survey_surveymodel.property.survey_questionNote.title                 = Note
-survey_surveymodel.property.survey_questionScore.title                = Score
-survey_surveymodel.property.survey_questionType.title                 = Crit\u00E8res d'\u00E9valuation
-survey_surveymodel.property.survey_questionUpperNote.title            = Note sup\u00E9rieure
-survey_surveymodel.property.survey_questionUrl.title                  = Url
-survey_surveymodel.property.survey_responseCommentLabel.title         = Libell\u00E9 du commentaire
-survey_surveymodel.property.survey_responseCommentType.title          = Type de commentaire
-survey_surveymodel.property.survey_responseType.title                 = Type de r\u00E9ponse
-survey_surveymodel.property.survey_slComment.title                    = Commentaire
-survey_surveymodel.property.survey_slResponse.title                   = Autre r\u00E9ponse
-survey_surveymodel.type.survey_surveyList.description                 = Permet d'ajouter un questionnaire sur une entit\u00E9
-survey_surveymodel.type.survey_surveyList.title                       = Questionnaire
-survey_surveymodel.type.survey_surveyQuestion.description             = Questionnaires (Administration)
-survey_surveymodel.type.survey_surveyQuestion.title                   = Questionnaires 
+survey_surveymodel.association.survey_advSearchSurveyAnswer1.title      = R\u00E9ponse 1
+survey_surveymodel.association.survey_advSearchSurveyAnswer10.title     = R\u00E9ponse 10
+survey_surveymodel.association.survey_advSearchSurveyAnswer2.title      = R\u00E9ponse 2
+survey_surveymodel.association.survey_advSearchSurveyAnswer3.title      = R\u00E9ponse 3
+survey_surveymodel.association.survey_advSearchSurveyAnswer4.title      = R\u00E9ponse 4
+survey_surveymodel.association.survey_advSearchSurveyAnswer5.title      = R\u00E9ponse 5
+survey_surveymodel.association.survey_advSearchSurveyAnswer6.title      = R\u00E9ponse 6
+survey_surveymodel.association.survey_advSearchSurveyAnswer7.title      = R\u00E9ponse 7
+survey_surveymodel.association.survey_advSearchSurveyAnswer8.title      = R\u00E9ponse 8
+survey_surveymodel.association.survey_advSearchSurveyAnswer9.title      = R\u00E9ponse 9
+survey_surveymodel.association.survey_advSearchSurveyQuestion1.title    = Question 1
+survey_surveymodel.association.survey_advSearchSurveyQuestion10.title   = Question 10
+survey_surveymodel.association.survey_advSearchSurveyQuestion2.title    = Question 2
+survey_surveymodel.association.survey_advSearchSurveyQuestion3.title    = Question 3
+survey_surveymodel.association.survey_advSearchSurveyQuestion4.title    = Question 4
+survey_surveymodel.association.survey_advSearchSurveyQuestion5.title    = Question 5
+survey_surveymodel.association.survey_advSearchSurveyQuestion6.title    = Question 6
+survey_surveymodel.association.survey_advSearchSurveyQuestion7.title    = Question 7
+survey_surveymodel.association.survey_advSearchSurveyQuestion8.title    = Question 8
+survey_surveymodel.association.survey_advSearchSurveyQuestion9.title    = Question 9
+survey_surveymodel.association.survey_fsLinkedCharactRefs.title         = Charact\u00E9ristiques li\u00E9es
+survey_surveymodel.association.survey_fsLinkedHierarchy.title           = Familles li\u00E9es
+survey_surveymodel.association.survey_nextQuestion.title                = Question suivante
+survey_surveymodel.association.survey_scoreCriterion.title              = Crit\u00E8re
+survey_surveymodel.association.survey_slChoices.title                   = Choix retenu
+survey_surveymodel.association.survey_slQuestion.title                  = Question
+survey_surveymodel.property.survey_advSearchResponseCommentType1.title  = Type de commentaire 1
+survey_surveymodel.property.survey_advSearchResponseCommentType10.title = Type de commentaire 10
+survey_surveymodel.property.survey_advSearchResponseCommentType2.title  = Type de commentaire 2
+survey_surveymodel.property.survey_advSearchResponseCommentType3.title  = Type de commentaire 3
+survey_surveymodel.property.survey_advSearchResponseCommentType4.title  = Type de commentaire 4
+survey_surveymodel.property.survey_advSearchResponseCommentType5.title  = Type de commentaire 5
+survey_surveymodel.property.survey_advSearchResponseCommentType6.title  = Type de commentaire 6
+survey_surveymodel.property.survey_advSearchResponseCommentType7.title  = Type de commentaire 7
+survey_surveymodel.property.survey_advSearchResponseCommentType8.title  = Type de commentaire 8
+survey_surveymodel.property.survey_advSearchResponseCommentType9.title  = Type de commentaire 9
+survey_surveymodel.property.survey_advSearchSlComment1.title            = Commentaire 1
+survey_surveymodel.property.survey_advSearchSlComment10.title           = Commentaire 10
+survey_surveymodel.property.survey_advSearchSlComment2.title            = Commentaire 2
+survey_surveymodel.property.survey_advSearchSlComment3.title            = Commentaire 3
+survey_surveymodel.property.survey_advSearchSlComment4.title            = Commentaire 4
+survey_surveymodel.property.survey_advSearchSlComment5.title            = Commentaire 5
+survey_surveymodel.property.survey_advSearchSlComment6.title            = Commentaire 6
+survey_surveymodel.property.survey_advSearchSlComment7.title            = Commentaire 7
+survey_surveymodel.property.survey_advSearchSlComment8.title            = Commentaire 8
+survey_surveymodel.property.survey_advSearchSlComment9.title            = Commentaire 9
+survey_surveymodel.property.survey_advSearchSlDateComment1.title        = Commentaire 1
+survey_surveymodel.property.survey_advSearchSlDateComment10.title       = Commentaire 10
+survey_surveymodel.property.survey_advSearchSlDateComment2.title        = Commentaire 2
+survey_surveymodel.property.survey_advSearchSlDateComment3.title        = Commentaire 3
+survey_surveymodel.property.survey_advSearchSlDateComment4.title        = Commentaire 4
+survey_surveymodel.property.survey_advSearchSlDateComment5.title        = Commentaire 5
+survey_surveymodel.property.survey_advSearchSlDateComment6.title        = Commentaire 6
+survey_surveymodel.property.survey_advSearchSlDateComment7.title        = Commentaire 7
+survey_surveymodel.property.survey_advSearchSlDateComment8.title        = Commentaire 8
+survey_surveymodel.property.survey_advSearchSlDateComment9.title        = Commentaire 9
+survey_surveymodel.property.survey_advSearchSlDisabledComment1.title    = Commentaire 1
+survey_surveymodel.property.survey_advSearchSlDisabledComment2.title    = Commentaire 2
+survey_surveymodel.property.survey_advSearchSlDisabledComment3.title    = Commentaire 3
+survey_surveymodel.property.survey_advSearchSlDisabledComment4.title    = Commentaire 4
+survey_surveymodel.property.survey_advSearchSlNumberComment1.title      = Commentaire 1
+survey_surveymodel.property.survey_advSearchSlNumberComment10.title     = Commentaire 10
+survey_surveymodel.property.survey_advSearchSlNumberComment2.title      = Commentaire 2
+survey_surveymodel.property.survey_advSearchSlNumberComment3.title      = Commentaire 3
+survey_surveymodel.property.survey_advSearchSlNumberComment4.title      = Commentaire 4
+survey_surveymodel.property.survey_advSearchSlNumberComment5.title      = Commentaire 5
+survey_surveymodel.property.survey_advSearchSlNumberComment6.title      = Commentaire 6
+survey_surveymodel.property.survey_advSearchSlNumberComment7.title      = Commentaire 7
+survey_surveymodel.property.survey_advSearchSlNumberComment8.title      = Commentaire 8
+survey_surveymodel.property.survey_advSearchSlNumberComment9.title      = Commentaire 9
+survey_surveymodel.property.survey_fsLinkedTypes.title                  = Types d'entit\u00E9
+survey_surveymodel.property.survey_fsSurveyListName.title               = Liste de questionnaires
+survey_surveymodel.property.survey_questionIsMandatory.title            = Obligatoire ?
+survey_surveymodel.property.survey_questionIsVisible.title              = Visible ?
+survey_surveymodel.property.survey_questionLabel.title                  = Libell\u00E9
+survey_surveymodel.property.survey_questionLowerNote.title              = Note inf\u00E9rieure
+survey_surveymodel.property.survey_questionNote.title                   = Note
+survey_surveymodel.property.survey_questionScore.title                  = Score
+survey_surveymodel.property.survey_questionType.title                   = Crit\u00E8res d'\u00E9valuation
+survey_surveymodel.property.survey_questionUpperNote.title              = Note sup\u00E9rieure
+survey_surveymodel.property.survey_questionUrl.title                    = Url
+survey_surveymodel.property.survey_responseCommentLabel.title           = Libell\u00E9 du commentaire
+survey_surveymodel.property.survey_responseCommentType.title            = Type de commentaire
+survey_surveymodel.property.survey_responseType.title                   = Type de r\u00E9ponse
+survey_surveymodel.property.survey_slComment.title                      = Commentaire
+survey_surveymodel.property.survey_slResponse.title                     = Autre r\u00E9ponse
+survey_surveymodel.type.survey_surveyList.description                   = Permet d'ajouter un questionnaire sur une entit\u00E9
+survey_surveymodel.type.survey_surveyList.title                         = Questionnaire
+survey_surveymodel.type.survey_surveyQuestion.description               = Questionnaires (Administration)
+survey_surveymodel.type.survey_surveyQuestion.title                     = Questionnaires 
