Fix #29327 - [Bug] Fix supplier account creation failure message

--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
@@ -144,7 +144,7 @@ message.copy-datalist-to                      = Copier la liste '{0}' vers...
 message.copy-datalist-to.notselected          = Aucune liste selectionn\u00E9e
 message.copy-shareable-links.success          = Lines copi\u00E9s dans le presse-papier
 message.create.please-wait                    = Veuillez patienter. Entit\u00E9 en cours de cr\u00E9ation...
-message.createSupplier.failure                = Vous n'avez pas les droits de r\u00E9aliser cette op\u00E9ration
+message.createSupplier.failure                = Echec de la cr\u00E9ation du compte fournisseur
 message.createSupplier.success                = L'utilisateur '{0}' est associ\u00E9 au fournissuer 
 message.delete-content.failure                = Erreur lors de la suppression du contenu
 message.delete-content.success                = Contenu supprim\u00E9 avec succ\u00E9s
@@ -175,6 +175,7 @@ message.synchronize-entities.failure          = Echec de la synchronisation des 
 message.synchronize-entities.please-wait      = Veuillez patienter. Entit\u00E9s en cours de synchronisation...
 message.synchronize-entities.please-wait-mail = Synchronisation des entit\u00E9s lanc\u00E9e, vous recevrez un mail quand elle sera termin\u00E9e
 message.synchronize-entities.success          = Succ\u00E8s de la synchronisation des entit\u00E9s
+message.too.many.items                        = Trop d'\u00E9l\u00E9ments s\u00E9lectionn\u00E9s ({0}). Veuillez s\u00E9lectionner 50 \u00E9l\u00E9ments ou moins.
 message.unlock.description                    = \u00CAtes-vous s\u00FBr de vouloir d\u00E9verrouiller le(s) ligne(s) ?
 message.unlock.failure                        = Impossible de d\u00E9verrouiller le(s) ligne(s)
 message.unlock.success                        = D\u00E9verrouillage effectu\u00E9
