--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model_fr.properties
@@ -192,5 +192,5 @@ type.qa_controlPlan                = Plan de contr\u00F4le
 type.qa_controlPoint               = Point de contr\u00F4le
 type.qa_controlStep                = Etape de contr\u00F4le
 type.qa_nc                         = Non conformit\u00E9
-type.qa_qualityControl             = Contr\u00C3\u00B4le qualit\u00C3\u00A9
+type.qa_qualityControl             = Contr\u00F4le qualit\u00E9
 type.qa_workItemAnalysis           = Analyses \u00E0 r\u00E9aliser
