Fix #29467 - Add productCollection client and supplier status

--- a/becpg-share/src/main/resources/alfresco/messages/becpg-model_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-model_fr.properties
@@ -33,6 +33,12 @@ data.revisiontype.major      = Majeure
 data.revisiontype.minor      = Mineure
 data.revisiontype.norevision = Sans r\u00E9vision
 
+status.client-archived               = Archiv\u00E9
+status.client-refused                = Refus\u00E9
+status.client-simulation             = Simulation
+status.client-stopped                = Arr\u00EAt\u00E9
+status.client-tovalidate             = A valider
+status.client-valid                  = Valid\u00E9
 status.document-archived             = Archiv\u00E9
 status.document-mandatory-archived   = Archiv\u00E9
 status.document-mandatory-refused    = Refus\u00E9
@@ -51,6 +57,18 @@ status.entity-simulation             = Simulation
 status.entity-stopped                = Arr\u00EAt\u00E9
 status.entity-tovalidate             = A valider
 status.entity-valid                  = Valid\u00E9
+status.productCollection-archived    = Archiv\u00E9
+status.productCollection-refused     = Refus\u00E9
+status.productCollection-simulation  = Simulation
+status.productCollection-stopped     = Arr\u00EAt\u00E9
+status.productCollection-tovalidate  = A valider
+status.productCollection-valid       = Valid\u00E9
+status.supplier-archived             = Archiv\u00E9
+status.supplier-refused              = Refus\u00E9
+status.supplier-simulation           = Simulation
+status.supplier-stopped              = Arr\u00EAt\u00E9
+status.supplier-tovalidate           = A valider
+status.supplier-valid                = Valid\u00E9
 
 type.bcpg_entityListItem = Liste de donn\u00E9es d'une entit\u00E9
 type.bcpg_linkedValue    = Valeurs Li\u00E9es
